# TrailPal26

./: .env.example  .gitignore  .railwayignore  3 Jan bug 1.gpx  API_USAGE.md  Dockerfile  GETTING_STARTED.md  README.md  alembic.ini  analyze_graph_completeness.py  analyze_road_street.py  cornwall_itinerary_3days (2).gpx  cornwall_itinerary_3days.gpx  cornwall_route.json  final_random_route.gpx  fresh_random_route.gpx  my_route.gpx  new_cornwall_route.gpx  overlap1.gpx  pyproject.toml  railway.toml  random_cornwall.gpx  requirements.txt  run_overlap_build.py  start.sh  test_api_gpx.py
alembic/: env.py
alembic/versions/: 20241219_initial_schema.py  20251228_add_pubs_table.py  20260103_add_connection_overlaps.py  20260104_add_route_feedback.py  20260104_add_waypoint_pub_columns.py  20260104_fix_unnamed_waypoints.py  20260104_update_unnamed_waypoints.py  20260105_add_routing_mode.py
static/: app.js  index.html  style.css
test runs/: bug 3 day.gpx  bug10.gpx  bug11.gpx  bug12.gpx  bug13.gpx  bug14.gpx  bug15.gpx  bug2.gpx  bug4.gpx  bug5.gpx  bug6.gpx  bug7.gpx  bug8.gpx  bug9.gpx  overlap1.gpx  v4.gpx  working1.gpx
tests/: test_config.py
trail_pal/: __init__.py  api.py  cli.py  config.py
trail_pal/algorithm/: __init__.py  itinerary_generator.py  onthefly_generator.py
trail_pal/db/: __init__.py  database.py  models.py
trail_pal/services/: __init__.py  google_places_client.py  graph_builder.py  ors_client.py  osm_client.py  overlap_analyzer.py  pub_finder.py  pub_recommender.py  waypoint_seeder.py
