[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trail-pal"
version = "0.1.0"
description = "A hiking itinerary generator for multi-day trails"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Trail Pal", email = "trailpal@example.com"}
]
dependencies = [
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.14",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "networkx>=3.2",
    "click>=8.1",
    "gpxpy>=1.6",
    "python-dotenv>=1.0",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
trail-pal = "trail_pal.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["trail_pal*"]

